--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: ruby
 rvm:
+ - 1.9.2
  - 1.9.3
  - 2.0.0
  - rbx-19mode
+ - rbx-head
  - jruby-19mode
+ - jruby-head
 matrix:
   allow_failures:
     - rvm: jruby-19mode
