JRuby CI is not going to work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ rvm:
  - 2.0.0
  - rbx-19mode
  - jruby-19mode
-env: JRUBY_OPTS="--server -Dcext.enabled=true -Xcompile.invokedynamic=false"
+matrix:
+  allow_failures:
+    - rvm: jruby-19mode
