--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ rvm:
  - 1.9.2
  - 1.9.3
  - 2.0.0
+ - rbx-18mode
  - rbx-19mode
+ - jruby-18mode
  - jruby-19mode
- - jruby-head
 matrix:
   allow_failures:
     - rvm: rbx-19mode
