--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ coverage
 lib/bundler/man
 pkg
 rdoc
+yardoc
 spec/reports
 test/tmp
 test/version_tmp
@@ -20,3 +21,4 @@ lib/parser/ruby18.rb
 lib/parser/ruby19.rb
 lib/parser/ruby20.rb
 lib/parser/ruby21.rb
+
