--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Gemfile.lock
 InstalledFiles
 _yardoc
 coverage
+doc/build
 lib/bundler/man
 pkg
 rdoc
@@ -21,4 +22,3 @@ lib/parser/ruby18.rb
 lib/parser/ruby19.rb
 lib/parser/ruby20.rb
 lib/parser/ruby21.rb
-
