--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ rvm:
  - 1.9.2
  - 1.9.3
  - 2.0.0
+ - 2.1.0
+ - ruby-head
  - jruby-18mode
  - jruby-19mode
  - rbx-2
+matrix:
+ allow_failures:
+  - rvm: ruby-head
 before_install:
  - gem update bundler
  - bundle --version
