--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ lib/parser/ruby22.rb
 lib/parser/ruby23.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
+ext/lexer/lexer.c
+lib/parser/lexer.so
