- Pass --no-line-convert to Racc in debug mode.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ test/tmp
 test/version_tmp
 tmp
 *.output
+.ruby-version
+.ruby-gemset
 lib/parser/lexer.rb
 lib/parser/ruby18.rb
 lib/parser/ruby19.rb
