--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,8 @@ matrix:
   - rvm: ruby-head
   - rvm: rbx-2
 before_install:
- - gem update bundler
+ - gem install bundler
  - bundle --version
- - gem update --system 2.6.6
  - gem --version
 script:
  - bundle exec rake test_cov
