--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
  allow_failures:
   - rvm: ruby-head
   - rvm: rbx-2
+  - rvm: jruby-18mode
+  - rvm: jruby-19mode
 before_install:
  - gem install bundler
  - bundle --version
