--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,14 @@ rvm:
  - 2.0.0
  - 2.2.5
  - 2.3.1
+ - 2.4.0
  - ruby-head
- - jruby-18mode
- - jruby-19mode
+ - jruby-9.1.13.0
  - rbx-2
 matrix:
  allow_failures:
   - rvm: ruby-head
   - rvm: rbx-2
-  - rvm: jruby-18mode
-  - rvm: jruby-19mode
 before_install:
  - gem install bundler
  - bundle --version
