--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ lib/parser/ruby21.rb
 lib/parser/ruby22.rb
 lib/parser/ruby23.rb
 lib/parser/ruby24.rb
+lib/parser/ruby25.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
