--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@ lib/parser/ruby22.rb
 lib/parser/ruby23.rb
 lib/parser/ruby24.rb
 lib/parser/ruby25.rb
+lib/parser/ruby26.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
