--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,39 @@
 dist: trusty
 language: ruby
-rvm:
- - 2.0.0
- - 2.2.9
- - 2.3.6
- - 2.4.3
- - 2.5.0
- - ruby-head
- - jruby-9.1.15.0
- - rbx-2
 matrix:
- allow_failures:
-  - rvm: ruby-head
-  - rvm: rbx-2
+  include:
+    - name: 2.0.0 / Parser tests
+      rvm: 2.0.0
+      script: bundle exec rake test_cov
+    - name: 2.2.9 / Parser tests
+      rvm: 2.2.9
+      script: bundle exec rake test_cov
+    - name: 2.3.6 / Parser tests
+      rvm: 2.3.6
+      script: bundle exec rake test_cov
+    - name: 2.4.3 / Parser tests
+      rvm: 2.4.3
+      script: bundle exec rake test_cov
+    - name: 2.5.0 / Parser tests
+      rvm: 2.5.0
+      script: bundle exec rake test_cov
+    - name: ruby-head / Parser tests
+      rvm: ruby-head
+      script: bundle exec rake test_cov
+    - name: jruby-9.1.15.0 / Parser tests
+      rvm: jruby-9.1.15.0
+      script: bundle exec rake test_cov
+    - name: rbx-2 / Parser tests
+      rvm: rbx-2
+      script: bundle exec rake test_cov
+    - name: 2.5.0 / Rubocop tests
+      rvm: 2.5.0
+      script: ./ci/run_rubocop_specs
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: rbx-2
+    - script: ./ci/run_rubocop_specs
 before_install:
- - gem install bundler
- - bundle --version
- - gem --version
-script:
- - bundle exec rake test_cov
+  - gem install bundler
+  - bundle --version
+  - gem --version
