--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,20 @@ matrix:
     - name: 2.0.0 / Parser tests
       rvm: 2.0.0
       script: bundle exec rake test_cov
-    - name: 2.2.9 / Parser tests
-      rvm: 2.2.9
+    - name: 2.2.10 / Parser tests
+      rvm: 2.2.10
       script: bundle exec rake test_cov
-    - name: 2.3.6 / Parser tests
-      rvm: 2.3.6
+    - name: 2.3.8 / Parser tests
+      rvm: 2.3.8
       script: bundle exec rake test_cov
-    - name: 2.4.3 / Parser tests
-      rvm: 2.4.3
+    - name: 2.4.5 / Parser tests
+      rvm: 2.4.5
       script: bundle exec rake test_cov
-    - name: 2.5.0 / Parser tests
-      rvm: 2.5.0
+    - name: 2.5.3 / Parser tests
+      rvm: 2.5.3
+      script: bundle exec rake test_cov
+    - name: 2.6.0 / Parser tests
+      rvm: 2.6.0
       script: bundle exec rake test_cov
     - name: ruby-head / Parser tests
       rvm: ruby-head
@@ -26,8 +29,11 @@ matrix:
     - name: rbx-2 / Parser tests
       rvm: rbx-2
       script: bundle exec rake test_cov
-    - name: 2.5.0 / Rubocop tests
-      rvm: 2.5.0
+    - name: 2.5.3 / Rubocop tests
+      rvm: 2.5.3
+      script: ./ci/run_rubocop_specs
+    - name: 2.6.0 / Rubocop tests
+      rvm: 2.6.0
       script: ./ci/run_rubocop_specs
   allow_failures:
     - rvm: ruby-head
