--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,11 @@ matrix:
     - name: jruby-9.1.15.0 / Parser tests
       rvm: jruby-9.1.15.0
       script: bundle exec rake test_cov
-    - name: rbx-2 / Parser tests
-      rvm: rbx-2
+    - name: rbx-4 / Parser tests
+      rvm: rbx-4
+      script: bundle exec rake test_cov
+    - name: truffleruby / Parser tests
+      rvm: truffleruby
       script: bundle exec rake test_cov
     - name: 2.5.8 / Rubocop tests
       rvm: 2.5.8
@@ -34,7 +37,7 @@ matrix:
       script: ./ci/run_rubocop_specs
   allow_failures:
     - rvm: ruby-head
-    - rvm: rbx-2
+    - rvm: rbx-4
     - script: ./ci/run_rubocop_specs
 before_install:
   - bundle --version
