--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,51 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.allow_failure }}
+    env:
+      BUNDLE_JOBS: 4
+      BUNDLE_RETRY: 3
+      CI: true
+      TRUFFLERUBYOPT: "--engine.Mode=latency"
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ["2.4.10", "2.5.8", "2.6.6", "2.7.2", "jruby-9.2"]
+        test_command: ["bundle exec rake test"]
+        allow_failure: [false]
+        include:
+          - ruby: "head"
+            test_command: "bundle exec rake test"
+            allow_failure: true
+          - ruby: "truffleruby"
+            test_command: "bundle exec rake test"
+            allow_failure: true
+          - ruby: "2.7.2"
+            test_command: "./ci/run_rubocop_specs"
+            allow_failure: true
     steps:
-    - name: succeed
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v1
+      with:
+        path: /home/runner/bundle
+        key: bundle-${{ matrix.ruby }}-${{ hashFiles('../Gemfile') }}-${{ hashFiles('**/*.gemspec') }}
+        restore-keys: |
+          bundle-${{ matrix.ruby }}-
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ matrix.ruby }}
+    - name: Install Ragel
+      run: |
+        sudo apt-get update
+        sudo apt-get install ragel
+    - name: Bundle install
+      run: |
+        bundle config path /home/runner/bundle
+        bundle install
+        bundle update
+    - name: Run tests
+      run: |
+        ${{ matrix.test_command }}
+    - name: ignore failure if the job is allowed to fail
+      if: ${{ matrix.allow_failure }}
       run: true
