--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ lib/parser/ruby26.rb
 lib/parser/ruby27.rb
 lib/parser/ruby28.rb
 lib/parser/ruby30.rb
+lib/parser/ruby31.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
