+ ruby32.y: branch parser

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ lib/parser/ruby27.rb
 lib/parser/ruby28.rb
 lib/parser/ruby30.rb
 lib/parser/ruby31.rb
+lib/parser/ruby32.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
