--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ tmp
 *.output
 .ruby-version
 .ruby-gemset
-lib/parser/lexer.rb
+lib/parser/lexer-F0.rb
+lib/parser/lexer-F1.rb
 lib/parser/ruby18.rb
 lib/parser/ruby19.rb
 lib/parser/ruby20.rb
