--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.7.7", "3.0.5", "3.1.3", "jruby-9.2"]
+        ruby: ["2.7.7", "3.0.5", "3.1.3", "3.2.0", "jruby-9.2"]
         test_command: ["bundle exec rake test"]
         include:
           - ruby: "head"
@@ -25,6 +25,8 @@ jobs:
           - ruby: "truffleruby"
             test_command: "bundle exec rake test || true"
           - ruby: "3.1.3"
+            test_command: "./ci/run_rubocop_specs || true"
+          - ruby: "3.2.0"
             test_command: "./ci/run_rubocop_specs || true"
     steps:
     - uses: actions/checkout@v3
