--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ lib/parser/ruby28.rb
 lib/parser/ruby30.rb
 lib/parser/ruby31.rb
 lib/parser/ruby32.rb
+lib/parser/ruby33.rb
 lib/parser/macruby.rb
 lib/parser/rubymotion.rb
