--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ tmp
 .ruby-gemset
 lib/parser/lexer-F0.rb
 lib/parser/lexer-F1.rb
+lib/parser/lexer-strings.rb
 lib/parser/ruby18.rb
 lib/parser/ruby19.rb
 lib/parser/ruby20.rb
